--- a/webapp/views/configuration/analysis.html
+++ b/webapp/views/configuration/analysis.html
@@ -113,7 +113,7 @@
              selected-nodes="ctrl.nodesDataSeries"
              on-selection="ctrl.showSelected(node)"
              selected-node="ctrl.selectedDataSeries">
-             {{ node.name }}
+             <img style="margin-right: 5px;" ng-src="{{ ctrl.getDataSeriesIcon(node) }}" alt="" max-width="20" height="20"> {{ node.name }}
           </treecontrol>
 
         </div>
@@ -154,38 +154,38 @@
               <div class="form-group" terrama2-show-errors>
                 <label>{{ i18n.__("Name") }}:</label>
                 <input class="form-control" name="name" ng-model="ctrl.analysis.name" placeholder="{{ i18n.__('Analysis Name') }}" type="text" required>
-  
-                <span class="help-block" 
-                      ng-show="forms.generalDataForm.name.$dirty && forms.generalDataForm.name.$invalid" 
+
+                <span class="help-block"
+                      ng-show="forms.generalDataForm.name.$dirty && forms.generalDataForm.name.$invalid"
                       ng-class="{'has-error': generalDataForm.name.$invalid}">
                       {{ i18n.__('Analysis name is required') }}
                 </span>
               </div>
             </div>
             <!-- /.col -->
-  
+
             <div class="col-md-4">
               <div class="form-group has-feedback" terrama2-show-errors>
                 <label>{{ i18n.__("Type") }}:</label>
-                <select class="form-control" 
-                        name="type" 
-                        ng-model="ctrl.analysis.type_id" 
+                <select class="form-control"
+                        name="type"
+                        ng-model="ctrl.analysis.type_id"
                         ng-disabled="ctrl.isUpdating"
-                        data-ng-change="ctrl.onAnalysisTypeChanged()" 
+                        data-ng-change="ctrl.onAnalysisTypeChanged()"
                         required>
                   <option value="{[ Enums.AnalysisType.DCP ]}">{{ i18n.__('DCP') }}</option>
                   <option value="{[ Enums.AnalysisType.MONITORED ]}">{{ i18n.__('Monitored Object') }}</option>
                   <option value="{[ Enums.AnalysisType.GRID ]}">{{ i18n.__('Grid') }}</option>
                 </select>
-  
-                <span class="help-block" 
+
+                <span class="help-block"
                       ng-show="forms.generalDataForm.type.$dirty && forms.generalDataForm.type.$error.required">
                   {{ i18n.__('Analysis type is required') }}
                 </span>
               </div>
               <!-- /.form-group -->
             </div>
-  
+
             <div class="col-md-12">
               <div class="form-group">
                 <label>{{ i18n.__("Description") }}:</label>
@@ -193,12 +193,12 @@
               </div>
               <!-- /.form-group -->
             </div>
-  
+
             <div class="col-md-8">
               <div class="form-group has-feedback" terrama2-show-errors>
                 <label>{{ i18n.__("Service") }}:</label>
-                <ui-select name="instance" 
-                           ng-model="ctrl.analysis.instance_id" 
+                <ui-select name="instance"
+                           ng-model="ctrl.analysis.instance_id"
                            ng-change="ctrl.onServiceChanged()" required>
                   <ui-select-match>
                     <img ng-src="{[ BASE_URL ]}images/services/analysis/analysis_service.png" style="height: 20px; margin-top: -10px;"/>
@@ -208,16 +208,16 @@
                     <img ng-src="{[ BASE_URL ]}images/services/analysis/analysis_service.png" style="height: 20px;"/>
                     <span ng-bind="instance.name"></span>
                   </ui-select-choices>
-  
+
                 </ui-select>
-  
+
                 <span class="help-block" ng-show="forms.generalDataForm.instance.$dirty && forms.generalDataForm.instance.$error.required">
                   {{ i18n.__('Analysis service is required') }}
                 </span>
               </div>
               <!-- /.form-group -->
             </div>
-  
+
             <div class="col-md-4">
               <div class="form-group">
                 <div class="form-group">
@@ -227,7 +227,7 @@
                     </label>
                   </div>
                 </div>
-  
+
               </div>
               <!-- /.form-group -->
             </div>
@@ -304,8 +304,8 @@
       </div>
     </terrama2-box>
 
-    <terrama2-box title="i18n.__(ctrl.semanticsSelected + ' Data Series')" 
-                  css="ctrl.css" 
+    <terrama2-box title="i18n.__(ctrl.semanticsSelected + ' Data Series')"
+                  css="ctrl.css"
                   ng-show="ctrl.analysis.type_id !== '{[ Enums.AnalysisType.GRID ]}'  && forms.generalDataForm.type.$valid">
       <div class="row">
         <div class="col-md-12">
@@ -367,11 +367,11 @@
                 <th>{{ i18n.__('Alias') }}</th>
                 <th></th>
               </tr>
-              <tr style="cursor:pointer;" 
-                  ng-repeat="dataSeries in ctrl.selectedDataSeriesList" 
-                  data-ng-click="onDataSeriesClick(dataSeries);" 
+              <tr style="cursor:pointer;"
+                  ng-repeat="dataSeries in ctrl.selectedDataSeriesList"
+                  data-ng-click="onDataSeriesClick(dataSeries);"
                   ng-class="{'active': ctrl.selectedDataSeries && ctrl.selectedDataSeries.name == dataSeries.name}">
-                <td>{{ dataSeries.name }}</td>
+                <td><img style="margin-right: 5px;" ng-src="{{ ctrl.getDataSeriesIcon(dataSeries) }}" alt="" max-width="20" height="20"> {{ dataSeries.name }}</td>
                 <td>{{ dataSeries.data_series_semantics.name }}</td>
                 <td>
                   <input type="text" class="form-control" name="name" ng-model="ctrl.metadata[dataSeries.name].alias" required>
@@ -399,7 +399,7 @@
       </div><!--./row-->
     </terrama2-box>
 
-    <terrama2-box title="i18n.__('Grid configuration')" 
+    <terrama2-box title="i18n.__('Grid configuration')"
                   css="ctrl.css"
                   ng-show="ctrl.analysis.type_id == {[ Enums.AnalysisType.GRID ]} && forms.generalDataForm.type.$valid">
       <div class="row">
@@ -570,8 +570,8 @@
       </div>
     </terrama2-box>
 
-    <terrama2-box title="i18n.__('Influence Area')" 
-                  css="ctrl.css" 
+    <terrama2-box title="i18n.__('Influence Area')"
+                  css="ctrl.css"
                   ng-show="ctrl.hasDcp() && forms.generalDataForm.type.$valid">
       <div class="row">
         <div class="col-md-12">
@@ -656,10 +656,10 @@
                   <div class="form-group" terrama2-show-errors>
                     <!-- TODO: combobox with data series properties -->
                     <label>{{ i18n.__("Influence Attribute") }}:</label>
-                    <input class="form-control" 
-                           name="attribute" 
-                           type="text" 
-                           ng-model="ctrl.analysis.metadata.INFLUENCE_ATTRIBUTE" 
+                    <input class="form-control"
+                           name="attribute"
+                           type="text"
+                           ng-model="ctrl.analysis.metadata.INFLUENCE_ATTRIBUTE"
                            ng-required="ctrl.analysis.metadata.INFLUENCE_TYPE == {[ Enums.InfluenceTypes.REGION.Value ]}">
 
                     <!-- required -->
@@ -705,7 +705,7 @@
           <div class="col-md-6">
             <!-- TerraMA² Functions Buttons -->
             <terrama2-analysis-helpers operators="ctrl.operators.utilities" target="ctrl.operatorValue" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
-            <terrama2-analysis-helpers ng-if="ctrl.operators.attributes.data && ctrl.analysis.type_id != {[Enums.AnalysisType.GRID]}" operators="ctrl.operators.attributes" target="ctrl.operatorValue" restriction="ctrl.analysisHelperRestriction" add-class="ctrl.addClass"></terrama2-analysis-helpers>            
+            <terrama2-analysis-helpers ng-if="ctrl.operators.attributes.data && ctrl.analysis.type_id != {[Enums.AnalysisType.GRID]}" operators="ctrl.operators.attributes" target="ctrl.operatorValue" restriction="ctrl.analysisHelperRestriction" add-class="ctrl.addClass"></terrama2-analysis-helpers>
             <terrama2-analysis-helpers ng-if="ctrl.analysis.type_id == {[Enums.AnalysisType.MONITORED]}" operators="ctrl.operators.dcp" target="ctrl.operatorValue" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
             <terrama2-analysis-helpers ng-if="ctrl.analysis.type_id == {[Enums.AnalysisType.DCP]}" operators="ctrl.operators.dcp_analysis" target="ctrl.operatorValue" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
             <terrama2-analysis-helpers ng-if="ctrl.analysis.type_id != {[Enums.AnalysisType.GRID]}" operators="ctrl.operators.grid_monitored" target="ctrl.operatorValue" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
@@ -739,7 +739,7 @@
             title=""
             data-original-title="{{ ctrl.helperMessages.validate.error || ctrl.helperMessages.validate.message }}"
             terrama2-tooltip="{{ ctrl.helperMessages.validate.error || ctrl.helperMessages.validate.message }}">
-        <button type="button" 
+        <button type="button"
                 class="btn btn-primary pull-right"
                 style="margin-left: 10px;"
                 ng-click="ctrl.instances.length > 0 && ctrl.validate()"
